--- a/friendlink/templates/signin.html
+++ b/friendlink/templates/signin.html
@@ -52,6 +52,18 @@
                     {% csrf_token %}
                     <input type="text" name="username" placeholder="Username" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     <input type="password" name="password" placeholder="Password" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    
+                    <div>
+                        <style>
+                            h5:{
+                                color: red;
+                            }
+                        </style>
+                        {% for message in messages %}
+                            <h5>{{message}}</h5>
+                        {% endfor %}
+                    </div>
+                    
                     <div class="flex justify-between my-4">
                         <div class="checkbox">
                             <input type="checkbox" id="chekcbox1" checked>
