--- a/friendlink/templates/setting.html
+++ b/friendlink/templates/setting.html
@@ -90,7 +90,7 @@
     
                     </div>
 
-                    <div>
+                    <!-- <div>
                         <h3 class="text-xl mb-2"> Privacy</h3>
                         <p> </p>
                     </div>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
     
                     </div>
                     <br>
