--- a/friendlink/templates/setting.html
+++ b/friendlink/templates/setting.html
@@ -47,13 +47,17 @@
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
     
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                           
+
+                            <div class="col-span-2">
+                                <label for="">Profile Picture</label>
+                                <input type="file" name="image" placeholder="" class="shadow-none bg-gray-100">
+                            </div>                           
                             <div class="col-span-2">
                                 <label for="about">Bio</label>  
                                 <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"></textarea>
                             </div> 
                             <div class="col-span-2">
-                                <label for=""> Location</label>
+                                <label for="">Location</label>
                                 <input type="text" name="location" placeholder="" class="shadow-none bg-gray-100">
                             </div>
 
