--- a/friendlink/templates/setting.html
+++ b/friendlink/templates/setting.html
@@ -45,29 +45,28 @@
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-    
-                       <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-
-                            <div class="col-span-2">
-                                <label for="">Profile Picture</label>
-                                <input type="file" name="image" placeholder="" class="shadow-none bg-gray-100">
-                            </div>                           
-                            <div class="col-span-2">
-                                <label for="about">Bio</label>  
-                                <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"></textarea>
+                        <form action="" method="POST">
+                            {% csrf_token %}
+                            <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
+                                <div class="col-span-2">
+                                    <label for="">Profile Picture</label>
+                                    <input type="file" name="image" placeholder="" class="shadow-none bg-gray-100">
+                                </div>                           
+                                <div class="col-span-2">
+                                    <label for="about">Bio</label>  
+                                    <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"></textarea>
+                                </div> 
+                                <div class="col-span-2">
+                                    <label for="">Location</label>
+                                    <input type="text" name="location" placeholder="" class="shadow-none bg-gray-100">
+                                </div>
                             </div> 
-                            <div class="col-span-2">
-                                <label for="">Location</label>
-                                <input type="text" name="location" placeholder="" class="shadow-none bg-gray-100">
+                        
+                            <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
+                                <button class="p-2 px-4 rounded bg-gray-50 text-red-500"><a href="/"> Cancel </a></button>
+                                <button type="submit" class="button bg-blue-700"> Save </button>
                             </div>
-
-                       </div> 
-    
-                       <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> Cancel </button>
-                           <button type="button" class="button bg-blue-700"> Save </button>
-                       </div>
-    
+                        </form> 
                     </div>
 
                     <!-- <div>
