--- a/friendlink/templates/setting.html
+++ b/friendlink/templates/setting.html
@@ -50,7 +50,7 @@
                             <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
                                 <div class="col-span-2">
                                     <label for="">Profile Picture</label>
-                                    <img src="{{user_profile.profileimg.url}}" />
+                                    <img heigth ="150" width="150" src="{{user_profile.profileimg.url}}" />
                                     <input type="file" name="image" value="" class="shadow-none bg-gray-100">
                                 </div>                           
                                 <div class="col-span-2">
