--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -73,7 +73,8 @@
                                             </svg>
                                         </div>
 
-                                        <form>
+                                        <form action="upload" method="POST" enctype="multipart/form-data">
+                                            {% csrf_token %}
                                             <!-- <p class="my-3 leading-6"> Upload picture here ...
                                             </p> -->
                                         
