--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -260,7 +260,7 @@
                                 
         
                                 <div class="py-3 px-4 space-y-3"> 
-                                
+                                    <p>{{post.caption}}</p>
                                     <div class="flex space-x-4 lg:font-bold">
                                         <a href="#" class="flex items-center space-x-2">
                                             <div class="p-2 rounded-full text-black">
@@ -270,20 +270,20 @@
                                             </div>
                                             
                                         </a>
-                                        <a href="#" class="flex items-center space-x-2">
+                                        <!-- <a href="#" class="flex items-center space-x-2">
                                             <div class="p-2 rounded-full text-black">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                     <path fill-rule="evenodd" d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z" clip-rule="evenodd" />
                                                 </svg>
                                             </div>
                                             
-                                        </a>
+                                        </a> -->
                                         <a href="#" class="flex items-center space-x-2 flex-1 justify-end">
                                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="currentColor"><path d="M8.5 1.5A1.5 1.5 0 0 1 10 0h4a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h6c-.314.418-.5.937-.5 1.5v6h-2a.5.5 0 0 0-.354.854l2.5 2.5a.5.5 0 0 0 .708 0l2.5-2.5A.5.5 0 0 0 10.5 7.5h-2v-6z"/></g></svg>
                                             
                                         </a>
                                     </div>
-                                    <div class="flex items-center space-x-3"> 
+                                    <!-- <div class="flex items-center space-x-3"> 
                                         <div class="flex items-center">
                                             <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt="" class="w-6 h-6 rounded-full border-2 border-white ">
                                             <img src="{% static 'assets/images/avatars/avatar-4.jpg' %}" alt="" class="w-6 h-6 rounded-full border-2 border-white  -ml-2">
@@ -292,9 +292,9 @@
                                         <div class="">
                                             Liked <strong> taiye</strong> and <strong> 209 Others </strong>
                                         </div>
-                                    </div>
+                                    </div> -->
 
-                                    <div class="border-t pt-4 space-y-4 ">
+                                    <!-- <div class="border-t pt-4 space-y-4 ">
                                         <div class="flex">
                                             <div class="w-10 h-10 rounded-full relative flex-shrink-0">
                                                 <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt="" class="absolute h-full rounded-full w-full">
@@ -315,15 +315,15 @@
                                                 <div class="absolute w-3 h-3 top-3 -left-1 bg-gray-100 transform rotate-45 "></div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
 
-                                    <div class="bg-gray-100 bg-gray-100 rounded-full rounded-md relative ">
+                                    <!-- <div class="bg-gray-100 bg-gray-100 rounded-full rounded-md relative ">
                                         <input type="text" placeholder="post a comment" class="bg-transparent max-h-10 shadow-none">
                                         <div class="absolute bottom-0 flex h-full items-center right-0 right-3 text-xl space-x-2">
                                             <a href="#"> <i class="uil-image"></i></a>
                                             <a href="#"> <i class="uil-video"></i></a>
                                         </div>
-                                    </div>
+                                    </div> -->
         
                                 </div>
         
