--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -208,10 +208,10 @@
                                     <div class="flex flex-1 items-center space-x-4">
                                         <a href="#">
                                             <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
-                                                <img src="{{user_profile.profileimg.url}}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
+                                                <a href="#"><img src="{{user_profile.profileimg.url}}" class="bg-gray-200 border border-white rounded-full w-8 h-8"></a>
                                             </div>
                                         </a>
-                                        <span class="block font-semibold "> {{post.user}} </span>
+                                        <span class="block font-semibold "> <a href="#">{{post.user}}</a></span>
                                     </div>
                                 <div>
                                     <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
