display newesrt post first

--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -200,7 +200,7 @@
                     <div class="space-y-5 flex-shrink-0 lg:w-7/12">
 
                         <!-- post 1-->
-                        {% for post in posts %}
+                        {% for post in posts reversed %}
                             <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
         
                                 <!-- post header-->
