--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -206,11 +206,11 @@
                                 <!-- post header-->
                                 <div class="flex justify-between items-center px-4 py-3">
                                     <div class="flex flex-1 items-center space-x-4">
-                                        <a href="#">
+                                        <!-- <a href="#">
                                             <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
                                                 <a href="#"><img src="{{user_profile.profileimg.url}}" class="bg-gray-200 border border-white rounded-full w-8 h-8"></a>
                                             </div>
-                                        </a>
+                                        </a> -->
                                         <span class="block font-semibold "> <a href="#">{{post.user}}</a></span>
                                     </div>
                                 <div>
