--- a/friendlink/templates/profile.html
+++ b/friendlink/templates/profile.html
@@ -43,7 +43,7 @@
 					<input type="hidden" value="{{user_object.username}}" name="user" />
 
 					{% if user_object.username != user.username %}
-						<a data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
+						<a data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{button_text}}</button></a>
 					{% else %}
 						<a href="/settings" data-ripple="" >Settings</a>
 					{% endif %}
