add profile page link

--- a/friendlink/templates/index.html
+++ b/friendlink/templates/index.html
@@ -211,7 +211,7 @@
                                                 <a href="#"><img src="{{user_profile.profileimg.url}}" class="bg-gray-200 border border-white rounded-full w-8 h-8"></a>
                                             </div>
                                         </a> -->
-                                        <span class="block font-semibold "> <a href="#">{{post.user}}</a></span>
+                                        <span class="block font-semibold "> <a href="/profile/{{post.user}}">{{post.user}}</a></span>
                                     </div>
                                 <div>
                                     <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
